# pl-prairielearn101

./: .editorconfig  .gitignore  README.md  infoCourse.json
clientFilesCourse/: MIPS_reference.html  iap.css  mipsstyle.html  waveform_viewer.html
clientFilesCourse/css/: engr101styles.css  matlab.css
clientFilesCourse/js/: lobster-exercises14.bundle.js  matcrab-exercises2.bundle.js  select-a-statement-formatting.js
clientFilesCourse/wavedrom/: wavedrom.min.js
courseInstances/IssuePlay/: infoCourseInstance.json
courseInstances/Misc_shared_questions/: infoCourseInstance.json
courseInstances/Part1/: infoCourseInstance.json
courseInstances/Part2/: infoCourseInstance.json
courseInstances/Part3/: infoCourseInstance.json
courseInstances/Part4/: infoCourseInstance.json
courseInstances/Part5/: infoCourseInstance.json
courseInstances/Sample Course/: infoCourseInstance.json
courseInstances/Showcase/: infoCourseInstance.json
courseInstances/Showcase_sigcse2023/: infoCourseInstance.json
courseInstances/Showcase_sigcse2024/: infoCourseInstance.json
questions/steve/very-different-use-of-student-code/tests/: Test.hs  question.cabal  stack.yaml
questions/steve/very-different-use-of-student-code/tests/src/: Lib.hs
questions/steve/very-different-use-of-student-code/tests/test/: Spec.mustache.hs
serverFilesCourse/: arguments.py  auto_full_credit.py  ece6143.py  equivalence.py  generatingAnswers.py  generatingAnswersCplusplus.py  inference.py  logicExpression.py  pl_breadboard.py  scratch.py  utilIAP.py  utility_functions.py  value_gen.py
(+1249 files in other folders)
