name:                question
version:             0.1.0.0
synopsis:            PrairieLearn question testing
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:
      Lib
  other-modules:
      Paths_question
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , filepath
    , regex-tdfa
  default-language: Haskell2010

test-suite auto-grade
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_question
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      QuickCheck
    , base >=4.7 && <5
    , filepath
    , question
    , test-framework
    , test-framework-quickcheck2
    , regex-tdfa
  default-language: Haskell2010
